cargo-features = ["edition2024"]
[package]
name = "rmodule"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rmodule"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0"
base = { path = "../../../../base" }
