[package]
name = "message_logger"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# WIT binding generation for guest (plugin)
wit-bindgen = "0.52.0"

# OurChat Plugin SDK (helper functions)
ourchat-plugin-sdk = { path = "../../../plugin-sdk" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
